--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/prettier": "^1.13.1",
     "chalk": "^2.4.1",
     "esm": "^3.0.65",
+    "gaze": "^1.1.3",
     "husky": "^0.14.3",
     "ignore": "^4.0.2",
     "prettier": "1.13.7",
