--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
-    "@siteimprove/alfa-json-ld": "^0.0.0"
+    "@siteimprove/alfa-json-ld": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-jsx": "^0.0.0",
