--- a/packages/alfa-json-ld/package.json
+++ b/packages/alfa-json-ld/package.json
@@ -21,6 +21,9 @@
   "bugs": "https://github.com/siteimprove/alfa/issues",
   "main": "src/index.js",
   "types": "src/index.d.ts",
+  "dependencies": {
+    "@siteimprove/alfa-util": "^0.0.0"
+  },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
   }
