--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "husky": "^0.14.3",
     "ignore": "^4.0.2",
     "prettier": "1.13.7",
+    "source-map": "^0.6.1",
     "tslint": "^5.10.0",
     "typescript": "^2.9.2"
   }
