--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -23,6 +23,7 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "dependencies": {
+    "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
