--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -14,9 +14,10 @@
     "wcag"
   ],
   "contributors": [
-    "Búgvi Magnussen <bbm@siteimprove.com>",
-    "Kasper Isager <kki@siteimprove.com>",
-    "Niclas Hedam <nhe@siteimprove.com>"
+    "Búgvi Benjamin Magnussen <bbm@siteimprove.com>",
+    "Kasper Kronborg Isager <kki@siteimprove.com>",
+    "Niclas Hedam <nhe@siteimprove.com>",
+    "Tobias Christian Jensen <tcj@siteimprove.com>"
   ],
   "repository": "https://github.com/siteimprove/alfa",
   "bugs": "https://github.com/siteimprove/alfa/issues",
