--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
   "workspaces": [
     "packages/*"
   ],
+  "esm": {
+    "cache": false
+  },
   "devDependencies": {
     "@types/node": "^10.5.5",
     "@types/prettier": "^1.13.2",
