Pin MDN browser compatibility data to specific version

--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -32,6 +32,6 @@
   },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0",
-    "mdn-browser-compat-data": "^0.0.46"
+    "mdn-browser-compat-data": "0.0.47"
   }
 }
