--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -24,7 +24,7 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "scripts": {
-    "prepare": "node -r esm build/subtags.js"
+    "prepare": "node build/subtags.js"
   },
   "dependencies": {
     "@siteimprove/alfa-util": "^0.0.0"
