--- a/packages/alfa-html/package.json
+++ b/packages/alfa-html/package.json
@@ -24,6 +24,7 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "dependencies": {
+    "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
