--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ignore": "^5.0.2",
     "prettier": "1.14.2",
     "source-map": "^0.7.3",
+    "source-map-support": "^0.5.9",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   }
