WIP on a style checker

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "node build/test.js",
     "start": "node build/start.js",
     "prepublish": "node build/prepublish.js",
-    "precommit": "node build/precommit.js"
+    "precommit": "node build/precommit.js",
+    "style-check": "node build/style-check.js"
   },
   "workspaces": [
     "packages/*"
