--- a/packages/alfa-crypto/package.json
+++ b/packages/alfa-crypto/package.json
@@ -23,6 +23,10 @@
   "bugs": "https://github.com/siteimprove/alfa/issues",
   "main": "src/index.js",
   "types": "src/index.d.ts",
+  "files": [
+    "src/**/*.js",
+    "src/**/*.d.ts"
+  ],
   "dependencies": {
     "@types/sjcl": "^1.0.28",
     "sjcl": "^1.0.7"
