--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
   "repository": "https://github.com/siteimprove/alfa",
   "bugs": "https://github.com/siteimprove/alfa/issues",
   "scripts": {
-    "prepare": "node build/prepare.js",
-    "test": "node build/test.js",
-    "start": "node build/start.js",
-    "prepublish": "node build/prepublish.js",
-    "precommit": "node build/precommit.js"
+    "prepare": "node scripts/prepare.js",
+    "test": "node scripts/test.js",
+    "start": "node scripts/start.js",
+    "prepublish": "node scripts/prepublish.js",
+    "precommit": "node scripts/precommit.js"
   },
   "workspaces": [
     "packages/*"
