--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "husky": "^0.14.3",
     "ignore": "^5.0.2",
     "prettier": "1.14.2",
+    "pretty-ms": "^3.2.0",
     "source-map": "^0.7.3",
     "source-map-support": "^0.5.9",
     "tslint": "^5.11.0",
