--- a/packages/alfa-util/package.json
+++ b/packages/alfa-util/package.json
@@ -27,6 +27,9 @@
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
+  "dependencies": {
+    "@types/node": "^10.9.4"
+  },
   "devDependencies": {
     "@siteimprove/alfa-test": "^0.0.0"
   }
