Progress on improved BCP47 parser

--- a/packages/alfa-iana/package.json
+++ b/packages/alfa-iana/package.json
@@ -31,6 +31,7 @@
     "prepare": "node scripts/subtags.js"
   },
   "dependencies": {
+    "@siteimprove/alfa-lang": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
