--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
+    "@siteimprove/alfa-util": "^0.0.0",
     "@types/node": "^10.9.2",
     "@types/puppeteer": "^1.6.0",
     "puppeteer": "^1.7.0"
