--- a/packages/alfa-act/package.json
+++ b/packages/alfa-act/package.json
@@ -28,6 +28,7 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-json-ld": "^0.0.0",
