--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -29,6 +29,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-compatibility": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
