--- a/packages/alfa-device/package.json
+++ b/packages/alfa-device/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-wcag",
+  "name": "@siteimprove/alfa-device",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -27,18 +27,8 @@
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
-  "dependencies": {
-    "@siteimprove/alfa-act": "^0.0.0",
-    "@siteimprove/alfa-aria": "^0.0.0",
-    "@siteimprove/alfa-compatibility": "^0.0.0",
-    "@siteimprove/alfa-device": "^0.0.0",
-    "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-iana": "^0.0.0",
-    "@siteimprove/alfa-lang": "^0.0.0",
-    "@siteimprove/alfa-util": "^0.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@siteimprove/alfa-jsx": "^0.0.0",
     "@siteimprove/alfa-test": "^0.0.0"
   }
 }
