--- a/packages/alfa-dom/package.json
+++ b/packages/alfa-dom/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@siteimprove/alfa-crypto": "^0.0.0",
     "@siteimprove/alfa-css": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
