--- a/packages/alfa-scrape/package.json
+++ b/packages/alfa-scrape/package.json
@@ -28,6 +28,8 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-act": "^0.0.0",
+    "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-http": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
