--- a/packages/alfa-react/package.json
+++ b/packages/alfa-react/package.json
@@ -38,6 +38,8 @@
     "@siteimprove/alfa-unexpected": "^0.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0"
+    "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0",
+    "@siteimprove/alfa-unexpected": "^0.0.0"
   }
 }
