--- a/packages/alfa-jest/package.json
+++ b/packages/alfa-jest/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-enzyme",
+  "name": "@siteimprove/alfa-jest",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -24,28 +24,17 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "files": [
-    "*.js",
-    "*.d.ts",
     "src/**/*.js",
     "src/**/*.d.ts"
   ],
   "dependencies": {
+    "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-react": "^0.0.0",
-    "@types/enzyme": "^3.1.14",
-    "enzyme": "^3.7.0"
-  },
-  "peerDependencies": {
-    "@siteimprove/alfa-chai": "^0.0.0",
-    "@siteimprove/alfa-jest": "^0.0.0",
-    "@siteimprove/alfa-should": "^0.0.0",
-    "@siteimprove/alfa-unexpected": "^0.0.0"
+    "@types/jest": "^23.3.9",
+    "jest": "^23.6.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-chai": "^0.0.0",
-    "@siteimprove/alfa-jest": "^0.0.0",
-    "@siteimprove/alfa-should": "^0.0.0",
-    "@siteimprove/alfa-test": "^0.0.0",
-    "@siteimprove/alfa-unexpected": "^0.0.0"
+    "@siteimprove/alfa-jsx": "^0.0.0",
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
