--- a/packages/alfa-react/package.json
+++ b/packages/alfa-react/package.json
@@ -37,11 +37,13 @@
   },
   "peerDependencies": {
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-jest": "^0.0.0",
     "@siteimprove/alfa-should": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0"
   },
   "devDependencies": {
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-jest": "^0.0.0",
     "@siteimprove/alfa-should": "^0.0.0",
     "@siteimprove/alfa-test": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0"
