more work on the caching of characters

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ package-lock.json
 **/*.map
 
 !packages/alfa-unicode/src/characters.js
+!packages/alfa-unicode/src/characters.js.map
 !packages/alfa-unicode/src/characters.d.ts
 
 !**/scripts/**/*.js
