--- a/packages/alfa-xpath/package.json
+++ b/packages/alfa-xpath/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-test",
+  "name": "@siteimprove/alfa-xpath",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -28,8 +28,10 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@types/node": "^10.12.10",
-    "chalk": "^2.4.1",
-    "error-stack-parser": "^2.0.2"
+    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-lang": "^0.0.0"
+  },
+  "devDependencies": {
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
