--- a/packages/alfa-chai/package.json
+++ b/packages/alfa-chai/package.json
@@ -29,7 +29,9 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
-    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-dom": "^0.0.0"
+  },
+  "peerDependencies": {
     "chai": "^4.2.0"
   },
   "devDependencies": {
