--- a/packages/alfa-jest/package.json
+++ b/packages/alfa-jest/package.json
@@ -30,7 +30,9 @@
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@types/jest": "^23.3.9",
+    "@types/jest": "^23.3.9"
+  },
+  "peerDependencies": {
     "jest": "^23.6.0"
   },
   "devDependencies": {
