--- a/packages/alfa-assert/package.json
+++ b/packages/alfa-assert/package.json
@@ -31,6 +31,7 @@
     "@siteimprove/alfa-act": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-highlight": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
     "@siteimprove/alfa-wcag": "^0.0.0"
   }
