--- a/packages/alfa-enzyme/package.json
+++ b/packages/alfa-enzyme/package.json
@@ -42,10 +42,6 @@
     "enzyme": "^3.7.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-chai": "^0.0.0",
-    "@siteimprove/alfa-jest": "^0.0.0",
-    "@siteimprove/alfa-should": "^0.0.0",
-    "@siteimprove/alfa-test": "^0.0.0",
-    "@siteimprove/alfa-unexpected": "^0.0.0"
+    "@siteimprove/alfa-test": "^0.0.0"
   }
 }
