--- a/packages/alfa-highlight/package.json
+++ b/packages/alfa-highlight/package.json
@@ -1,6 +1,6 @@
 {
   "private": true,
-  "name": "@siteimprove/alfa-test",
+  "name": "@siteimprove/alfa-highlight",
   "author": "Siteimprove A/S",
   "homepage": "https://siteimprove.com",
   "version": "0.0.0",
@@ -28,8 +28,8 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-highlight": "^0.0.0",
-    "@types/node": "^10.12.10",
-    "error-stack-parser": "^2.0.2"
+    "@types/chalk": "^2.2.0",
+    "chalk": "^2.4.1",
+    "emphasize": "^2.0.0"
   }
 }
