--- a/packages/alfa-unexpected/package.json
+++ b/packages/alfa-unexpected/package.json
@@ -29,7 +29,8 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
-    "@siteimprove/alfa-dom": "^0.0.0"
+    "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-highlight": "^0.0.0"
   },
   "peerDependencies": {
     "unexpected": "^10.39.2"
