--- a/packages/alfa-unicode/package.json
+++ b/packages/alfa-unicode/package.json
@@ -34,6 +34,7 @@
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
-    "@siteimprove/alfa-test": "^0.0.0"
+    "@siteimprove/alfa-test": "^0.0.0",
+    "prettier": "1.15.3"
   }
 }
