--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -1,3 +1,101 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "files": [
+    "src/alphabet.ts",
+    "src/converters.ts",
+    "src/escape.ts",
+    "src/grammars/declaration.ts",
+    "src/grammars/media.ts",
+    "src/grammars/rule.ts",
+    "src/grammars/selector.ts",
+    "src/index.ts",
+    "src/parse.ts",
+    "src/properties.ts",
+    "src/properties/color/grammar.ts",
+    "src/properties/color/property.ts",
+    "src/properties/color/types.ts",
+    "src/properties/content/grammar.ts",
+    "src/properties/content/property.ts",
+    "src/properties/content/types.ts",
+    "src/properties/display/grammar.ts",
+    "src/properties/display/property.ts",
+    "src/properties/display/types.ts",
+    "src/properties/font/family/grammar.ts",
+    "src/properties/font/family/property.ts",
+    "src/properties/font/property.ts",
+    "src/properties/font/size/grammar.ts",
+    "src/properties/font/size/property.ts",
+    "src/properties/font/stretch/grammar.ts",
+    "src/properties/font/stretch/property.ts",
+    "src/properties/font/style/grammar.ts",
+    "src/properties/font/style/property.ts",
+    "src/properties/font/types.ts",
+    "src/properties/font/variant/grammar.ts",
+    "src/properties/font/variant/property.ts",
+    "src/properties/font/weight/grammar.ts",
+    "src/properties/font/weight/property.ts",
+    "src/properties/helpers/get-property.ts",
+    "src/properties/helpers/get-root-style.ts",
+    "src/properties/line-height/grammar.ts",
+    "src/properties/line-height/property.ts",
+    "src/properties/line-height/types.ts",
+    "src/properties/longhands.ts",
+    "src/properties/opacity/grammar.ts",
+    "src/properties/opacity/property.ts",
+    "src/properties/opacity/types.ts",
+    "src/properties/shorthands.ts",
+    "src/properties/text-decoration/color/property.ts",
+    "src/properties/text-decoration/line/grammar.ts",
+    "src/properties/text-decoration/line/property.ts",
+    "src/properties/text-decoration/style/grammar.ts",
+    "src/properties/text-decoration/style/property.ts",
+    "src/properties/text-decoration/types.ts",
+    "src/properties/text-indent/grammar.ts",
+    "src/properties/text-indent/property.ts",
+    "src/properties/text-indent/types.ts",
+    "src/properties/visibility/grammar.ts",
+    "src/properties/visibility/property.ts",
+    "src/properties/visibility/types.ts",
+    "src/resolvers.ts",
+    "src/style.ts",
+    "src/types.ts",
+    "src/units.ts",
+    "src/values.ts",
+    "test/alphabet.spec.ts",
+    "test/escape.spec.ts",
+    "test/grammars/declaration.spec.ts",
+    "test/grammars/media.spec.ts",
+    "test/grammars/rule.spec.ts",
+    "test/grammars/selector.spec.ts",
+    "test/parse.spec.ts",
+    "test/properties/color/grammar.spec.ts",
+    "test/properties/content/grammar.spec.ts",
+    "test/properties/display/grammar.spec.ts",
+    "test/properties/font/family/grammar.spec.ts",
+    "test/properties/font/size/grammar.spec.ts",
+    "test/properties/font/weight/grammar.spec.ts",
+    "test/properties/opacity/grammar.spec.ts",
+    "test/properties/text-decoration/line/grammar.spec.ts",
+    "test/properties/text-decoration/style/grammar.spec.ts",
+    "test/properties/text-indent/grammar.spec.ts",
+    "test/units.spec.ts",
+    "test/values.spec.ts"
+  ],
+  "references": [
+    {
+      "path": "../alfa-compatibility"
+    },
+    {
+      "path": "../alfa-device"
+    },
+    {
+      "path": "../alfa-lang"
+    },
+    {
+      "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-util"
+    }
+  ]
 }
