--- a/packages/alfa-html/tsconfig.json
+++ b/packages/alfa-html/tsconfig.json
@@ -1,3 +1,26 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "files": [
+    "src/alphabet.ts",
+    "src/entities.ts",
+    "src/grammar.ts",
+    "src/index.ts",
+    "src/prefix-tree.ts",
+    "test/alphabet.spec.ts",
+    "test/grammar.spec.ts"
+  ],
+  "references": [
+    {
+      "path": "../alfa-dom"
+    },
+    {
+      "path": "../alfa-lang"
+    },
+    {
+      "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-util"
+    }
+  ]
 }
