--- a/packages/alfa-pointer/tsconfig.json
+++ b/packages/alfa-pointer/tsconfig.json
@@ -1,3 +1,9 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "files": ["src/index.ts", "src/types.ts"],
+  "references": [
+    {
+      "path": "../alfa-test"
+    }
+  ]
 }
