--- a/packages/alfa-should/tsconfig.json
+++ b/packages/alfa-should/tsconfig.json
@@ -1,3 +1,18 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "files": ["src/create-should-plugin.ts", "src/index.ts"],
+  "references": [
+    {
+      "path": "../alfa-assert"
+    },
+    {
+      "path": "../alfa-dom"
+    },
+    {
+      "path": "../alfa-jsx"
+    },
+    {
+      "path": "../alfa-test"
+    }
+  ]
 }
