--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -1,3 +1,90 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../tsconfig.json",
+  "files": [
+    "src/helpers/has-language-attribute.ts",
+    "src/helpers/is-document-element.ts",
+    "src/index.ts",
+    "src/rules.ts",
+    "src/sia-r1/rule.ts",
+    "src/sia-r10/rule.ts",
+    "src/sia-r11/rule.ts",
+    "src/sia-r12/rule.ts",
+    "src/sia-r13/rule.ts",
+    "src/sia-r14/rule.ts",
+    "src/sia-r15/rule.ts",
+    "src/sia-r16/rule.ts",
+    "src/sia-r17/rule.ts",
+    "src/sia-r18/rule.ts",
+    "src/sia-r19/rule.ts",
+    "src/sia-r2/rule.ts",
+    "src/sia-r20/rule.ts",
+    "src/sia-r21/rule.ts",
+    "src/sia-r22/rule.ts",
+    "src/sia-r23/rule.ts",
+    "src/sia-r24/rule.ts",
+    "src/sia-r25/rule.ts",
+    "src/sia-r26/rule.ts",
+    "src/sia-r27/rule.ts",
+    "src/sia-r3/rule.ts",
+    "src/sia-r4/rule.ts",
+    "src/sia-r5/rule.ts",
+    "src/sia-r6/rule.ts",
+    "src/sia-r7/rule.ts",
+    "src/sia-r8/rule.ts",
+    "src/sia-r9/rule.ts",
+    "test/helpers/document-from-nodes.tsx",
+    "test/helpers/has-language-attribute.spec.tsx",
+    "test/helpers/is-document-element.spec.tsx",
+    "test/helpers/outcome.ts",
+    "test/sia-r1/rule.spec.tsx",
+    "test/sia-r10/rule.spec.tsx",
+    "test/sia-r11/rule.spec.tsx",
+    "test/sia-r12/rule.spec.tsx",
+    "test/sia-r13/rule.spec.tsx",
+    "test/sia-r14/rule.spec.tsx",
+    "test/sia-r15/rule.spec.tsx",
+    "test/sia-r16/rule.spec.tsx",
+    "test/sia-r17/rule.spec.tsx",
+    "test/sia-r18/rule.spec.tsx",
+    "test/sia-r2/rule.spec.tsx",
+    "test/sia-r3/rule.spec.tsx",
+    "test/sia-r4/rule.spec.tsx",
+    "test/sia-r5/rule.spec.tsx",
+    "test/sia-r6/rule.spec.tsx",
+    "test/sia-r7/rule.spec.tsx",
+    "test/sia-r8/rule.spec.tsx",
+    "test/sia-r9/rule.spec.tsx"
+  ],
+  "references": [
+    {
+      "path": "../alfa-act"
+    },
+    {
+      "path": "../alfa-aria"
+    },
+    {
+      "path": "../alfa-compatibility"
+    },
+    {
+      "path": "../alfa-device"
+    },
+    {
+      "path": "../alfa-dom"
+    },
+    {
+      "path": "../alfa-iana"
+    },
+    {
+      "path": "../alfa-jsx"
+    },
+    {
+      "path": "../alfa-lang"
+    },
+    {
+      "path": "../alfa-test"
+    },
+    {
+      "path": "../alfa-util"
+    }
+  ]
 }
