Implement `isExposed()` and refactor `isVisible()`

--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -121,6 +121,7 @@
     "src/has-name-from.ts",
     "src/has-text-alternative.ts",
     "src/index.ts",
+    "src/is-exposed.ts",
     "src/is-landmark.ts",
     "src/is-visible.ts",
     "src/is-widget.ts",
@@ -229,6 +230,7 @@
     "test/get-text-alternative.spec.tsx",
     "test/has-name-from.spec.ts",
     "test/has-text-alternative.spec.tsx",
+    "test/is-exposed.spec.tsx",
     "test/is-landmark.spec.tsx",
     "test/is-visible.spec.tsx",
     "test/is-widget.spec.tsx",
