--- a/packages/alfa-chai/package.json
+++ b/packages/alfa-chai/package.json
@@ -30,9 +30,7 @@
   ],
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
-    "@siteimprove/alfa-dom": "^0.0.0"
-  },
-  "peerDependencies": {
+    "@siteimprove/alfa-dom": "^0.0.0",
     "chai": "^4.2.0"
   },
   "devDependencies": {
