--- a/packages/alfa-enzyme/package.json
+++ b/packages/alfa-enzyme/package.json
@@ -31,16 +31,14 @@
     "src/**/*.d.ts"
   ],
   "dependencies": {
-    "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-react": "^0.0.0",
-    "@types/enzyme": "^3.1.18",
-    "@types/react": "^16.8.4"
-  },
-  "peerDependencies": {
     "@siteimprove/alfa-chai": "^0.0.0",
+    "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-jest": "^0.0.0",
+    "@siteimprove/alfa-react": "^0.0.0",
     "@siteimprove/alfa-should": "^0.0.0",
     "@siteimprove/alfa-unexpected": "^0.0.0",
+    "@types/enzyme": "^3.1.18",
+    "@types/react": "^16.8.4",
     "enzyme": "^3.7.0",
     "react": "^16.8.2"
   },
