--- a/packages/alfa-unexpected/package.json
+++ b/packages/alfa-unexpected/package.json
@@ -31,9 +31,7 @@
   "dependencies": {
     "@siteimprove/alfa-assert": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
-    "@siteimprove/alfa-highlight": "^0.0.0"
-  },
-  "peerDependencies": {
+    "@siteimprove/alfa-highlight": "^0.0.0",
     "unexpected": "^10.39.2"
   },
   "devDependencies": {
