--- a/packages/eslint-plugin-alfa/package.json
+++ b/packages/eslint-plugin-alfa/package.json
@@ -33,9 +33,7 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-wcag": "^0.0.0",
     "@types/eslint": "^4.16.6",
-    "@types/estree": "^0.0.39"
-  },
-  "peerDependencies": {
+    "@types/estree": "^0.0.39",
     "eslint": "^5.9.0"
   },
   "devDependencies": {
