Add missing TypeScript file references

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -74,9 +74,13 @@
     "test/get-input-type.spec.tsx",
     "test/get-key-selector.spec.ts",
     "test/get-label.spec.tsx",
+    "test/get-next-element-sibling.spec.tsx",
     "test/get-next-sibling.spec.tsx",
     "test/get-node.spec.tsx",
+    "test/get-owner-element.spec.tsx",
+    "test/get-parent-element.spec.tsx",
     "test/get-parent-node.spec.tsx",
+    "test/get-parent-rule.spec.tsx",
     "test/get-specificity.spec.ts",
     "test/get-style.spec.tsx",
     "test/get-tab-index.spec.tsx",
