Change question title

--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -5,6 +5,7 @@
     "src/helpers/is-document-element.ts",
     "src/index.ts",
     "src/rules.ts",
+    "src/sia-r1/locales/en.ts",
     "src/sia-r1/rule.ts",
     "src/sia-r10/rule.ts",
     "src/sia-r11/rule.ts",
@@ -15,7 +16,9 @@
     "src/sia-r16/rule.ts",
     "src/sia-r17/rule.ts",
     "src/sia-r18/rule.ts",
+    "src/sia-r19/locales/en.ts",
     "src/sia-r19/rule.ts",
+    "src/sia-r2/locales/en.ts",
     "src/sia-r2/rule.ts",
     "src/sia-r20/rule.ts",
     "src/sia-r21/rule.ts",
