Implement browser specific applicabilites and expectations

--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -12,6 +12,9 @@
   ],
   "references": [
     {
+      "path": "../alfa-compatibility"
+    },
+    {
       "path": "../alfa-device"
     },
     {
