--- a/packages/alfa-compatibility/tsconfig.json
+++ b/packages/alfa-compatibility/tsconfig.json
@@ -7,6 +7,7 @@
     "src/expand-browsers.ts",
     "src/expand-versions.ts",
     "src/features.ts",
+    "src/filter.ts",
     "src/get-default-browsers.ts",
     "src/get-feature-support.ts",
     "src/guards.ts",
@@ -18,6 +19,7 @@
     "src/some.ts",
     "src/supported-browsers.ts",
     "src/types.ts",
+    "src/unwrap.ts",
     "src/with-browsers.ts",
     "test/browser-specific.spec.ts",
     "test/every.spec.ts",
