Implement remaining media rules

--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -4,6 +4,7 @@
     "src/helpers/applicabilities/audio.ts",
     "src/helpers/applicabilities/video.ts",
     "src/helpers/has-language-attribute.ts",
+    "src/helpers/has-outcome.ts",
     "src/helpers/is-document-element.ts",
     "src/index.ts",
     "src/rules.ts",
@@ -34,6 +35,13 @@
     "src/sia-r3/rule.ts",
     "src/sia-r30/rule.ts",
     "src/sia-r31/rule.ts",
+    "src/sia-r32/rule.ts",
+    "src/sia-r33/rule.ts",
+    "src/sia-r34/rule.ts",
+    "src/sia-r35/rule.ts",
+    "src/sia-r36/rule.ts",
+    "src/sia-r37/rule.ts",
+    "src/sia-r38/rule.ts",
     "src/sia-r4/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
