Progress on media rule locales

--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -25,7 +25,9 @@
     "src/sia-r2/rule.ts",
     "src/sia-r20/rule.ts",
     "src/sia-r21/rule.ts",
+    "src/sia-r22/locales/en.ts",
     "src/sia-r22/rule.ts",
+    "src/sia-r23/locales/en.ts",
     "src/sia-r23/rule.ts",
     "src/sia-r24/rule.ts",
     "src/sia-r25/rule.ts",
