--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -45,6 +45,7 @@
     "src/sia-r36/rule.ts",
     "src/sia-r37/rule.ts",
     "src/sia-r38/rule.ts",
+    "src/sia-r39/rule.ts",
     "src/sia-r4/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
