--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -6,6 +6,7 @@
     "src/helpers/has-language-attribute.ts",
     "src/helpers/has-outcome.ts",
     "src/helpers/is-document-element.ts",
+    "src/helpers/is-perceivable.ts",
     "src/index.ts",
     "src/rules.ts",
     "src/sia-r1/locales/en.ts",
