--- a/packages/alfa-act/tsconfig.json
+++ b/packages/alfa-act/tsconfig.json
@@ -7,8 +7,7 @@
     "src/index.ts",
     "src/sort-rules.ts",
     "src/to-json.ts",
-    "src/types.ts",
-    "test/helpers/rules.ts"
+    "src/types.ts"
   ],
   "references": [
     {
