Update TypeScript to 3.4

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "composite": true,
     "declaration": true,
     "declarationMap": true,
+    "incremental": true,
     "jsx": "react",
     "jsxFactory": "jsx",
     "lib": ["es2015"],
