Make `isRendered()` and `isVisible()` run in amortized constant time

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -89,7 +89,9 @@
     "test/get-text-content.spec.tsx",
     "test/has-attribute.spec.tsx",
     "test/has-class.spec.tsx",
+    "test/is-rendered.spec.tsx",
     "test/is-tabbable.spec.tsx",
+    "test/is-visible.spec.tsx",
     "test/matches.spec.tsx",
     "test/query-selector.spec.tsx",
     "test/serialize.spec.tsx",
