Add missing sources

--- a/packages/alfa-dom/tsconfig.json
+++ b/packages/alfa-dom/tsconfig.json
@@ -82,6 +82,9 @@
     "test/get-parent-element.spec.tsx",
     "test/get-parent-node.spec.tsx",
     "test/get-parent-rule.spec.tsx",
+    "test/get-previous-element-sibling.spec.tsx",
+    "test/get-previous-sibling.spec.tsx",
+    "test/get-root-node.spec.tsx",
     "test/get-specificity.spec.ts",
     "test/get-style.spec.tsx",
     "test/get-tab-index.spec.tsx",
