Be more strict about whitespace trimming

--- a/packages/alfa-util/tsconfig.json
+++ b/packages/alfa-util/tsconfig.json
@@ -19,6 +19,9 @@
     "src/set/intersect.ts",
     "src/set/subtract.ts",
     "src/set/union.ts",
+    "src/string/trim-left.ts",
+    "src/string/trim-right.ts",
+    "src/string/trim.ts",
     "src/type/immutable.ts",
     "src/type/mutable.ts",
     "src/type/predicate.ts",
