--- a/packages/alfa-aria/package.json
+++ b/packages/alfa-aria/package.json
@@ -32,6 +32,7 @@
     "@siteimprove/alfa-compatibility": "^0.0.0",
     "@siteimprove/alfa-device": "^0.0.0",
     "@siteimprove/alfa-dom": "^0.0.0",
+    "@siteimprove/alfa-unicode": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
