--- a/packages/alfa-aria/tsconfig.json
+++ b/packages/alfa-aria/tsconfig.json
@@ -253,6 +253,9 @@
       "path": "../alfa-test"
     },
     {
+      "path": "../alfa-unicode"
+    },
+    {
       "path": "../alfa-util"
     }
   ]
