--- a/packages/alfa-wcag/package.json
+++ b/packages/alfa-wcag/package.json
@@ -36,6 +36,7 @@
     "@siteimprove/alfa-dom": "^0.0.0",
     "@siteimprove/alfa-iana": "^0.0.0",
     "@siteimprove/alfa-lang": "^0.0.0",
+    "@siteimprove/alfa-unicode": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0"
   },
   "devDependencies": {
