--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -105,6 +105,9 @@
       "path": "../alfa-test"
     },
     {
+      "path": "../alfa-unicode"
+    },
+    {
       "path": "../alfa-util"
     }
   ]
