--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -67,8 +67,18 @@
     "test/sia-r16/rule.spec.tsx",
     "test/sia-r17/rule.spec.tsx",
     "test/sia-r18/rule.spec.tsx",
+    "test/sia-r19/rule.spec.tsx",
     "test/sia-r2/rule.spec.tsx",
+    "test/sia-r20/rule.spec.tsx",
+    "test/sia-r21/rule.spec.tsx",
+    "test/sia-r22/rule.spec.tsx",
+    "test/sia-r23/rule.spec.tsx",
+    "test/sia-r24/rule.spec.tsx",
+    "test/sia-r25/rule.spec.tsx",
+    "test/sia-r26/rule.spec.tsx",
+    "test/sia-r27/rule.spec.tsx",
     "test/sia-r3/rule.spec.tsx",
+    "test/sia-r31/rule.spec.tsx",
     "test/sia-r4/rule.spec.tsx",
     "test/sia-r5/rule.spec.tsx",
     "test/sia-r6/rule.spec.tsx",
