--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -48,6 +48,7 @@
     "src/sia-r38/rule.ts",
     "src/sia-r39/rule.ts",
     "src/sia-r4/rule.ts",
+    "src/sia-r40/rule.ts",
     "src/sia-r5/rule.ts",
     "src/sia-r6/rule.ts",
     "src/sia-r7/rule.ts",
