--- a/docs/examples/scrape-and-audit/tsconfig.json
+++ b/docs/examples/scrape-and-audit/tsconfig.json
@@ -1,8 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
-  "compilerOptions": {
-    "allowJs": true,
-    "checkJs": true,
-    "declaration": false
-  }
+  "extends": "../tsconfig.json",
+  "files": ["index.ts"],
+  "references": [{ "path": "../../../packages" }]
 }
