List missing source files

--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -34,6 +34,9 @@
     "src/properties/font/variant/property.ts",
     "src/properties/font/weight/grammar.ts",
     "src/properties/font/weight/property.ts",
+    "src/properties/height/grammar.ts",
+    "src/properties/height/property.ts",
+    "src/properties/height/types.ts",
     "src/properties/helpers/get-property.ts",
     "src/properties/helpers/get-root-style.ts",
     "src/properties/line-height/grammar.ts",
@@ -56,6 +59,9 @@
     "src/properties/visibility/grammar.ts",
     "src/properties/visibility/property.ts",
     "src/properties/visibility/types.ts",
+    "src/properties/width/grammar.ts",
+    "src/properties/width/property.ts",
+    "src/properties/width/types.ts",
     "src/resolvers.ts",
     "src/style.ts",
     "src/types.ts",
