--- a/packages/alfa-wcag/tsconfig.json
+++ b/packages/alfa-wcag/tsconfig.json
@@ -78,9 +78,21 @@
     "test/sia-r25/rule.spec.tsx",
     "test/sia-r26/rule.spec.tsx",
     "test/sia-r27/rule.spec.tsx",
+    "test/sia-r28/rule.spec.tsx",
+    "test/sia-r29/rule.spec.tsx",
     "test/sia-r3/rule.spec.tsx",
+    "test/sia-r30/rule.spec.tsx",
     "test/sia-r31/rule.spec.tsx",
+    "test/sia-r32/rule.spec.tsx",
+    "test/sia-r33/rule.spec.tsx",
+    "test/sia-r34/rule.spec.tsx",
+    "test/sia-r35/rule.spec.tsx",
+    "test/sia-r36/rule.spec.tsx",
+    "test/sia-r37/rule.spec.tsx",
+    "test/sia-r38/rule.spec.tsx",
+    "test/sia-r39/rule.spec.tsx",
     "test/sia-r4/rule.spec.tsx",
+    "test/sia-r40/rule.spec.tsx",
     "test/sia-r5/rule.spec.tsx",
     "test/sia-r6/rule.spec.tsx",
     "test/sia-r7/rule.spec.tsx",
