Include all scripts in TypeScript config

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -5,5 +5,38 @@
     "checkJs": true,
     "noEmit": true
   },
-  "files": []
+  "files": [
+    "format.js",
+    "helpers/child-process.js",
+    "helpers/coverage.js",
+    "helpers/crypto.js",
+    "helpers/file-system.js",
+    "helpers/git.js",
+    "helpers/graph.js",
+    "helpers/iterable.js",
+    "helpers/language-host.js",
+    "helpers/manifest.js",
+    "helpers/meta.js",
+    "helpers/metrics/arithmetic.js",
+    "helpers/metrics/byte.js",
+    "helpers/metrics/cyclomatic.js",
+    "helpers/metrics/logical.js",
+    "helpers/notify.js",
+    "helpers/path.js",
+    "helpers/predicates.js",
+    "helpers/project.js",
+    "helpers/time.js",
+    "helpers/typescript.js",
+    "helpers/workspace.js",
+    "precommit.js",
+    "prepare.js",
+    "prepublish.js",
+    "start.js",
+    "tasks/build.js",
+    "tasks/clean.js",
+    "tasks/diagnose.js",
+    "tasks/format.js",
+    "tasks/test.js",
+    "test.js"
+  ]
 }
