--- a/packages/alfa-compatibility/package.json
+++ b/packages/alfa-compatibility/package.json
@@ -32,6 +32,7 @@
     "prepare": "node scripts/features.js && node scripts/browsers.js"
   },
   "dependencies": {
+    "@siteimprove/alfa-collection": "^0.0.0",
     "@siteimprove/alfa-util": "^0.0.0",
     "browserslist": "^4.4.1"
   },
