--- a/packages/alfa-css/tsconfig.json
+++ b/packages/alfa-css/tsconfig.json
@@ -46,6 +46,11 @@
     "src/properties/opacity/grammar.ts",
     "src/properties/opacity/property.ts",
     "src/properties/opacity/types.ts",
+    "src/properties/overflow/grammar.ts",
+    "src/properties/overflow/property-x.ts",
+    "src/properties/overflow/property-y.ts",
+    "src/properties/overflow/property.ts",
+    "src/properties/overflow/types.ts",
     "src/properties/shorthands.ts",
     "src/properties/text-decoration/color/property.ts",
     "src/properties/text-decoration/line/grammar.ts",
@@ -81,6 +86,8 @@
     "test/properties/font/size/grammar.spec.ts",
     "test/properties/font/weight/grammar.spec.ts",
     "test/properties/opacity/grammar.spec.ts",
+    "test/properties/overflow/grammar.spec.ts",
+    "test/properties/overflow/property.spec.ts",
     "test/properties/text-decoration/line/grammar.spec.ts",
     "test/properties/text-decoration/style/grammar.spec.ts",
     "test/properties/text-indent/grammar.spec.ts",
